--- a/Semantic_and_Sentiment_analysis.ipynb
+++ b/Semantic_and_Sentiment_analysis.ipynb
@@ -166,8 +166,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-=======
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -175,17 +173,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "jelo\n"
      ]
     }
    ],
    "source": [
-    "print('hello')"
+    "print('jelo')"
    ]
   },
   {
    "cell_type": "code",
->>>>>>> 478ff0b (Commit)
    "execution_count": null,
    "metadata": {},
    "outputs": [],
