--- a/NLP_Basics.ipynb
+++ b/NLP_Basics.ipynb
@@ -40,9 +40,21 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.tokens.doc.Doc"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "doc= nlp(myString)          #Tokenization"
+    "doc= nlp(myString)          #Tokenization\n",
+    "type(doc)"
    ]
   },
   {
@@ -108,22 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A\n",
-      "5\n",
-      "km\n",
-      "ride\n",
-      "costs\n",
-      "me\n",
-      "$\n",
-      "11.34\n",
-      ".\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
       "A\n"
      ]
     }
@@ -131,7 +143,7 @@
    "source": [
     "doc3= nlp(u\"A 5km ride costs me $11.34.\")\n",
     "for i in doc3:\n",
-    "    print(i)\n",
+    "    print(type(i.text))\n",
     "print(doc3[0])"
    ]
   },
@@ -488,31 +500,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The\n",
+      "the\n",
       "Solar\n",
       "Power\n",
       "industry\n",
-      "is\n",
-      "growing\n",
+      "be\n",
+      "grow\n",
       ".\n",
       "SolarPower\n",
-      "is\n",
+      "be\n",
       "the\n",
       "upcoming\n",
       "company\n",
-      "gaining\n",
-      "sales\n",
+      "gain\n",
+      "sale\n",
       ".\n",
-      "Solar\n",
+      "solar\n",
       "--\n",
-      "Power\n",
+      "power\n",
       "will\n",
       "be\n",
       "the\n",
@@ -520,15 +532,16 @@
       "energy\n",
       "source\n",
       ".\n",
-      "Solar\n",
+      "solar\n",
       "...\n",
-      "Power\n"
+      "power\n"
      ]
     }
    ],
    "source": [
     "doc_solar_power= nlp(u\"The Solar Power industry is growing. SolarPower is the upcoming company gaining sales. Solar--Power will be the future energy source. Solar...Power\")\n",
     "for token in doc_solar_power:\n",
+    "    token= token.lemma_\n",
     "    print(token)"
    ]
   },
